Update BeerDTO, Beer and Customer controllers and tests