@@ -41,7 +41,7 @@ class CustomerControllerIT {
     @Transactional
     @Test
     void deleteByIdFound() {
-        Customer customer = customerRepository.findAll().get(0);
+        Customer customer = customerRepository.findAll().getFirst();
 
         ResponseEntity responseEntity = customerController.deleteById(customer.getId());
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(204));
@@ -60,7 +60,7 @@ class CustomerControllerIT {
     @Transactional
     @Test
     void updateExistingCustomer() {
-        Customer customer = customerRepository.findAll().get(0);
+        Customer customer = customerRepository.findAll().getFirst();
         CustomerDTO customerDTO = customerMapper.customerToCustomerDto(customer);
         customerDTO.setId(null);
         customerDTO.setVersion(null);
@@ -97,7 +97,7 @@ class CustomerControllerIT {
 
     @Test
     void testGetById() {
-        Customer customer = customerRepository.findAll().get(0);
+        Customer customer = customerRepository.findAll().getFirst();
 
         CustomerDTO customerDTO = customerController.getCustomer(customer.getId());
 
